# LSJ_Quiz

./: .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
core/: models.py  permissions.py
question/: models.py  serializers.py  urls.py  views.py
question/migrations/: 0001_initial.py
quiz/: models.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_initial.py  0002_quiz_question_count_alter_quiz_created_by_and_more.py  0003_quiz_deleted_at_quiz_is_deleted.py
quiz_attempt/: apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
quiz_attempt/migrations/: 0001_initial.py  0002_alter_quizattempt_attempt_code.py  0003_alter_quizattemptquestion_options_and_more.py  0004_quizattemptquestion_is_correct_and_more.py  0005_alter_quizattempt_attempt_code.py  0006_alter_quizattempt_attempt_code.py  0007_alter_quizattempt_attempt_code.py  0008_alter_quizattempt_attempt_code.py  0009_alter_quizattempt_attempt_code.py
tests/: conftest.py  factories.py  test_quiz.py  test_quiz_attempt.py
